--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,6 +2,7 @@
 import Header from "../components/Header.astro"
 import Footer from "../components/Footer.astro"
 import StructuredData from "../components/meta/StructuredData.astro"
+import { ViewTransitions } from 'astro:transitions';
 import Icons from "../components/meta/Icons.astro"
 import { SEO } from "astro-seo"
 import {
@@ -100,7 +101,7 @@ import "../styles/global.css"
 ---
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" transition:animate="none">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
@@ -131,6 +132,7 @@ import "../styles/global.css"
         link: link,
       }}
     />
+    <ViewTransitions />
     <Icons />
     <script defer data-domain="ddev.com" src="https://plausible.io/js/script.js"
     ></script>
@@ -146,7 +148,7 @@ import "../styles/global.css"
   </head>
   <body class="dark:bg-slate-800">
     <Header />
-    <div class="mx-auto">
+    <div class="mx-auto" transition:animate="slide">
       <slot />
     </div>
     <Footer />
