Add DDEV store links.

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,6 +2,7 @@
 /**
  * Global site footer.
  */
+import __AstroComponent_ from "src/pages/404.astro"
 import {
   GITHUB_ISSUES_URL,
   DOCUMENTATION_URL,
@@ -11,6 +12,7 @@ import {
   MASTODON_URL,
   X_URL,
   GITHUB_URL,
+  STORE_URL,
 } from "../const"
 
 import Icon from "./Icon.astro"
@@ -24,6 +26,7 @@ const navigation = {
   ],
   product: [
     { name: "About", href: "/about" },
+    { name: "Store", href: STORE_URL, target: "_blank"},
     { name: "Contributing", href: "/support-ddev" },
     { name: "Contributor Live Training", href: "/blog/contributor-training"},
     { name: "Blog", href: "/blog" },
@@ -85,11 +88,19 @@ const navigation = {
             <ul class="mt-4 space-y-4 dark:text-white">
               {
                 navigation.product.map((item) => (
+                  item.target == "undefined" ?
                   <li>
                     <a href={item.href} class="text-base" rel="prefetch">
                       {item.name}
                     </a>
                   </li>
+                  :
+                  <li>
+                    <a href={item.href} class="text-base" rel="prefetch" target={item.target}>
+                      {item.name}
+                    </a>
+                  </li>
+
                 ))
               }
             </ul>
@@ -102,7 +113,7 @@ const navigation = {
               {
                 navigation.social.map((item) => (
                     <li>
-                      <a href={item.href} class="text-base" rel="prefetch">
+                      <a href={item.href} class="text-base" rel="prefetch" target="_blank">
                         {item.name}
                       </a>
                     </li>
