updated based on feedback.

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -25,7 +25,7 @@ const navigation = {
   ],
   product: [
     { name: "About", href: "/about" },
-    { name: "Store", href: STORE_URL, target: "_blank"},
+    { name: "Swag Shop", href: STORE_URL, target: "_blank"},
     { name: "Contributing", href: "/support-ddev" },
     { name: "Contributor Live Training", href: "/blog/contributor-training"},
     { name: "Blog", href: "/blog" },
