--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,7 +2,7 @@
 /**
  * Global site header.
  */
-import { GITHUB_URL, DOCUMENTATION_URL, STORE_URL } from "../const"
+import { GITHUB_URL, DOCUMENTATION_URL } from "../const"
 import {
   MagnifyingGlassIcon,
   Bars2Icon,
@@ -109,13 +109,6 @@ import {
             target="_blank">GitHub</a
           >
         </li>
-        <li>
-          <a
-            class="font-bold whitespace-nowrap dark:text-white"
-            href={STORE_URL}
-            target="_blank">Store</a
-          >
-        </li>
         <li class="mx-4">
           <a
             class="font-bold whitespace-nowrap dark:text-white"
@@ -168,13 +161,6 @@ import {
             class="font-bold block py-3 px-4 text-lg border-t border-dotted"
             href={GITHUB_URL}
             target="_blank">GitHub</a
-          >
-        </li>
-        <li>
-          <a
-            class="font-bold block py-3 px-4 text-lg border-t border-dotted"
-            href={STORE_URL}
-            target="_blank">Store</a
           >
         </li>
         <li>
