--- a/src/components/quickstart/Mac.astro
+++ b/src/components/quickstart/Mac.astro
@@ -19,8 +19,7 @@ const { latestVersion } = Astro.props
   </p>
 
   <h2 class="text-3xl mt-24">
-    <small class="block font-mono text-xs text-gray-500">1/3</small>Install
-    Docker
+    <small class="block font-mono text-xs text-gray-500">1/3</small>Install Orbstack Docker Provider
   </h2>
 </div>
 
