--- a/src/components/BlogPostCard.astro
+++ b/src/components/BlogPostCard.astro
@@ -3,13 +3,15 @@
  * A single card used to represent a blog post. Should probably be placed in a flex grid.
  */
 import type { CollectionEntry } from "astro:content"
+import { Picture } from 'astro:assets'
 interface Props {
   post: CollectionEntry<"blog">
 }
 
 import { getEntryBySlug } from "astro:content"
-import { Picture } from "astro-imagetools/components"
+// import { Picture } from "astro-imagetools/components"
 import { getSlug, formatDate, getCategoryUrl } from "../lib/api"
+import Image from "astro/components/Image.astro"
 
 const { post } = Astro.props
 const { remarkPluginFrontmatter } = await post.render()
@@ -45,17 +47,11 @@ const firstCategory = post.data.categories.length
         <img src={featureImageUrl} alt={featureImageAlt} />
       ) : (
         <Picture
-          attributes={{
-            picture: {
-              class: `block h-48 w-full object-cover relative`,
-            },
-          }}
-          format={["webp"]}
+          class="block h-48 w-full object-cover relative",
           src={featureImageUrl}
           alt={featureImageAlt}
           width={600}
           height={400}
-          fit="cover"
         />
       )
     }
