Updates ddev.com to astro 4.5, fixes #165, fixes #156, fixes #155, fixes #157, fixes #159 (#181)
* Updated ddev.com website to the latest astro release.

* need to either replace glob.sync with something else or make it work.

* Fixes the xml and json feeds.

* Fixes search and glob package config.

* Replaces base64-img for node-base64-image. That takes care of all of the dependabot's warnings.

* Cleans up files and fixes image for blog posts.

* Updates a few extra packages.

--- a/src/components/BlogPostCard.astro
+++ b/src/components/BlogPostCard.astro
@@ -3,12 +3,12 @@
  * A single card used to represent a blog post. Should probably be placed in a flex grid.
  */
 import type { CollectionEntry } from "astro:content"
+import { Picture } from 'astro:assets'
 interface Props {
   post: CollectionEntry<"blog">
 }
 
 import { getEntryBySlug } from "astro:content"
-import { Picture } from "astro-imagetools/components"
 import { getSlug, formatDate, getCategoryUrl } from "../lib/api"
 
 const { post } = Astro.props
@@ -45,17 +45,11 @@ const firstCategory = post.data.categories.length
         <img src={featureImageUrl} alt={featureImageAlt} />
       ) : (
         <Picture
-          attributes={{
-            picture: {
-              class: `block h-48 w-full object-cover relative`,
-            },
-          }}
-          format={["webp"]}
+          class="block h-48 w-full object-cover relative",
           src={featureImageUrl}
           alt={featureImageAlt}
           width={600}
           height={400}
-          fit="cover"
         />
       )
     }
