--- a/src/components/quickstart/Cloud.astro
+++ b/src/components/quickstart/Cloud.astro
@@ -66,7 +66,7 @@ const { latestVersion } = Astro.props
         </ol>
       </div>
       <a
-        href="https://github.com/codespaces/new?hide_repo_select=true&ref=20221220_codespaces&repo=80927419&machine=basicLinux32gb&location=WestUs2"
+        href="https://codespaces.new/ddev/ddev"
         ><img
           src="https://github.com/codespaces/badge.svg"
           alt="Open in GitHub Codespaces"
