--- a/src/components/quickstart/Linux.astro
+++ b/src/components/quickstart/Linux.astro
@@ -35,7 +35,7 @@ const { latestVersion } = Astro.props
         </p>
         <Terminal
           type="ubuntu"
-          code={`$ sudo apt-get update\n$ sudo apt-get install docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin`}
+          code={`$ sudo apt-get update\n$ sudo apt-get install curl docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin`}
         />
       </div>
     </Fragment>
@@ -67,7 +67,7 @@ const { latestVersion } = Astro.props
 
         <Terminal
           type="ubuntu"
-          code={`$ sudo apt-get remove docker docker-engine docker.io containerd runc\n$ sudo apt-get update\n$ sudo apt-get install docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin`}
+          code={`$ sudo apt-get remove docker docker-engine docker.io containerd runc\n$ sudo apt-get update\n$ sudo apt-get install curl docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin`}
         />
       </div>
     </Fragment>
