Use M Series as a badge for macOS

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -39,7 +39,7 @@ import { CloudIcon } from "@heroicons/react/24/solid/index.js"
           <span class="w-4 h-4 inline-block mr-1 relative top-[2px]"
             ><Icon name="Apple" />
           </span>
-          macOS <Badge>M1</Badge><Badge>M2</Badge><Badge>Intel</Badge>
+          macOS <Badge>M Series</Badge><Badge>Intel</Badge>
         </li>
         <li class="whitespace-nowrap my-1">
           <span class="w-4 h-4 inline-block mr-1 relative top-[2px]"
