Fix grammar typo in about.astro

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -31,9 +31,9 @@ const releaseData = await getReleases()
             originated within the company “Drud” in about 2016. Drud was
             building a general-purpose CLI for its infant web hosting product
             (named “DDEV-Live”, with the local dev tool named “DDEV-Local”), and
-            the and was visionary enough to build local development into the
-            idea. (Nobody really remembers what “DDEV” stands for, it might be
-            “Docker development” or it might have been “Drud development”.)
+            was visionary enough to build local development into the idea.
+            (Nobody really remembers what “DDEV” stands for, it might be “Docker
+            development” or it might have been “Drud development”.)
           </p>
 
           <p>
