--- a/src/pages/foundation.astro
+++ b/src/pages/foundation.astro
@@ -7,7 +7,7 @@ import {
   ORG_NAME,
   ORG_STREET,
   ORG_CITY,
-  ORG_STATE_BR,
+  ORG_STATE_ABBR,
   ORG_POSTAL_CODE,
   ORG_COUNTRY,
   ORG_PHONE,
@@ -46,7 +46,7 @@ const title = `DDEV Foundation`
 
           {ORG_NAME}<br />
           {ORG_STREET}<br />
-          {ORG_CITY}, {ORG_STATE_BR}&nbsp;{ORG_POSTAL_CODE}<br />
+          {ORG_CITY}, {ORG_STATE_ABBR}&nbsp;{ORG_POSTAL_CODE}<br />
           {ORG_COUNTRY}<br />
           {ORG_PHONE}<br />
 
