Update Codespaces link

--- a/src/components/quickstart/Cloud.astro
+++ b/src/components/quickstart/Cloud.astro
@@ -66,7 +66,7 @@ const { latestVersion } = Astro.props
         </ol>
       </div>
       <a
-        href="https://codespaces.new/ddev/ddev"
+        href="https://github.com/codespaces/new/ddev/ddev"
         ><img
           src="https://github.com/codespaces/badge.svg"
           alt="Open in GitHub Codespaces"
