--- a/src/components/quickstart/Linux.astro
+++ b/src/components/quickstart/Linux.astro
@@ -19,7 +19,7 @@ const { latestVersion } = Astro.props
   </p>
 
   <h2 class="text-3xl mt-24">
-    <small class="block font-mono text-xs text-gray-500">1/3</small>Install
+    <small class="block font-mono text-xs text-gray-500">1/4</small>Install
     Docker
   </h2>
 
@@ -92,7 +92,7 @@ const { latestVersion } = Astro.props
 
 <div class="prose dark:prose-invert">
   <h2 class="text-3xl mt-24">
-    <small class="block font-mono text-xs text-gray-500">2/3</small>Install DDEV
+    <small class="block font-mono text-xs text-gray-500">2/4</small>Install DDEV
   </h2>
 
   <Tabs order={["Ubuntu", "CentOS", "Debian", "Fedora"]}>
@@ -136,9 +136,25 @@ const { latestVersion } = Astro.props
   <Terminal type="ubuntu" code={`$ ddev -v\nddev version ${latestVersion}`} />
 </div>
 
+
+<div class="prose dark:prose-invert">
+  <p>Confirm that you’ve now got DDEV installed: 🎉</p>
+  <Terminal code={`→ ddev -v\nddev version ${latestVersion}`} />
+
+  <h2 class="text-3xl mt-24">
+    <small class="block font-mono text-xs text-gray-500">3/4</small>Run `mkcert -install`
+  </h2>
+
+  <p>Running `mkcert -install` is a one-time operation. It allows your browser to trust the HTTPS/TLS certificates served by DDEV.</p>
+  <Terminal code={`→ $ mkcert -install
+Created a new local CA 💥
+The local CA is now installed in the system trust store! ⚡️
+The local CA is now installed in the Firefox and/or Chrome/Chromium trust store (requires browser restart)! 🦊`} />
+</div>
+
 <div class="prose dark:prose-invert">
   <h2 class="text-3xl mt-24">
-    <small class="block font-mono text-xs text-gray-500">3/3</small>Create a
+    <small class="block font-mono text-xs text-gray-500">4/4</small>Create a
     Project
   </h2>
 
