--- a/src/components/quickstart/Mac.astro
+++ b/src/components/quickstart/Mac.astro
@@ -83,7 +83,7 @@ const { latestVersion } = Astro.props
   </h2>
 
   <p>Running `mkcert -install` is a one-time operation. It allows your browser to trust the HTTPS/TLS certificates served by DDEV.</p>
-  <Terminal code={`→ $ mkcert -install
+  <Terminal code={`→ mkcert -install
 Created a new local CA 💥
 Sudo password:
 The local CA is now installed in the system trust store! ⚡️
