Remove duplicate code

--- a/src/components/AnimatedTerminal.astro
+++ b/src/components/AnimatedTerminal.astro
@@ -69,7 +69,7 @@ Container ddev-router  Running
 │            │      │                                            │ or 'root/root'     │
 ├────────────┼──────┼────────────────────────────────────────────┼────────────────────┤
 │ Mailpit    │      │ Mailpit: https://my-project.ddev.site:8026 │                    │
-│            │      │ \`ddev mailpit\`                             │                    │
+│            │      │ Launch: ddev mailpit                       │                    │
 ├────────────┼──────┼────────────────────────────────────────────┼────────────────────┤
 │ All URLs   │      │ https://my-project.ddev.site,              │                    │
 │            │      │ https://127.0.0.1:51046,                   │                    │
