--- a/src/components/quickstart/Cloud.astro
+++ b/src/components/quickstart/Cloud.astro
@@ -3,6 +3,7 @@ import Terminal from "@components/Terminal.astro"
 import Tabs from "@components/Tabs.astro"
 import { Code } from "astro/components"
 import CommunityCTA from "./CommunityCTA.astro"
+import Examples from "./Examples.astro"
 
 export interface Props {
   latestVersion: string
@@ -26,11 +27,12 @@ const { latestVersion } = Astro.props
           > using Gitpod and install DDEV:
         </p>
         <Terminal
-          code={`→ curl -fsSL https://pkg.ddev.com/apt/gpg.key | gpg --dearmor | sudo tee /etc/apt/trusted.gpg.d/ddev.gpg > /dev/null\n→ echo "deb [signed-by=/etc/apt/trusted.gpg.d/ddev.gpg] https://pkg.ddev.com/apt/ * *" | sudo tee /etc/apt/sources.list.d/ddev.list\n→ sudo apt update && sudo apt install -y ddev
+          code={`→ curl -fsSL https://pkg.ddev.com/apt/gpg.key | gpg --dearmor | sudo tee /etc/apt/keyrings/ddev.gpg > /dev/null\n→ echo "deb [signed-by=/etc/apt/keyrings/ddev.gpg] https://pkg.ddev.com/apt/ * *" | sudo tee /etc/apt/sources.list.d/ddev.list >/dev/null\n→ sudo apt-get update && sudo apt-get install -y ddev
 `}
         />
       </div>
       <a href="https://gitpod.io/#https://github.com/ddev/ddev"
+        target="_blank"
         ><img
           src="/img/open-in-gitpod.svg"
           alt="Open in Gitpod"
@@ -43,14 +45,20 @@ const { latestVersion } = Astro.props
         <ol>
           <li>
             <a href="https://github.com/codespaces/new"
+              target="_blank"
               >Create a new codespace</a
             > for your project or open an existing one.
           </li>
           <li>
-            Edit the project’s <code>.devcontainer/devcontainer.json</code> file
-            to include these two lines in the “features” section:
+            Edit the project’s <code>.devcontainer/devcontainer.json</code> file:
             <Code
-              code={`"features": {\n    "ghcr.io/devcontainers/features/docker-in-docker:2": {},\n    "ghcr.io/ddev/ddev/install-ddev:latest": {}\n},`}
+              code={`{
+    "image": "mcr.microsoft.com/devcontainers/universal:2",
+    "features": {
+        "ghcr.io/ddev/ddev/install-ddev:latest": {}
+        }
+    }
+`}
               theme="nord"
               lang="json"
             />
@@ -67,6 +75,7 @@ const { latestVersion } = Astro.props
       </div>
       <a
         href="https://github.com/codespaces/new/ddev/ddev"
+        target="_blank"
         ><img
           src="https://github.com/codespaces/badge.svg"
           alt="Open in GitHub Codespaces"
@@ -78,102 +87,17 @@ const { latestVersion } = Astro.props
 
   <p>Confirm that you’ve now got DDEV installed: 🎉</p>
   <Terminal code={`→ ddev -v\nddev version ${latestVersion}`} />
+  
+  <p>
+    Or use the <a href="https://ddev.github.io/ddev-gitpod-launcher/" target="_blank">ddev-gitpod-launcher</a> form to launch a repository.
+    You’ll provide a source repository and click a button to open a newly-established environment.
+    You can specify a companion artifacts repository and automatically load <code>db.sql.gz</code> and <code>files.tgz</code> from it.
+    (More details in the <a href="https://github.com/ddev/ddev-gitpod-launcher/blob/main/README.md" target="_blank">repository’s README</a>.)
+  </p>
 </div>
 
-<div class="prose dark:prose-invert">
-  <h2 class="text-3xl mt-24">
-    <small class="block font-mono text-xs text-gray-500">2/2</small>Create a
-    Project
-  </h2>
-
-  <p>
-    Initialize the DDEV project by running the <a
-      href="https://ddev.readthedocs.io/en/stable/users/usage/commands/#config"
-      target="_blank"
-      ><code>ddev config</code>
-    </a> command:
-  </p>
-  <Terminal code={`→ ddev config`} />
-
-  <p>
-    Start the project for the first time. You’ll use the same command to start
-    it later, too!
-  </p>
-  <Terminal code={`→ ddev start`} />
-
-  <p>
-    If it’s a Composer project, you may also need to run <a
-      href="https://ddev.readthedocs.io/en/stable/users/usage/commands/#composer"
-      target="_blank"
-      ><code>ddev composer install</code>
-    </a>.
-  </p>
-
-  <p>
-    Now run the <a
-      href="https://ddev.readthedocs.io/en/stable/users/usage/commands/#launch"
-      target="_blank"
-      >launch command</a
-    > to open your project in a browser:
-  </p>
-  <Terminal code={`→ ddev launch`} />
-</div>
+<Examples itemNumber="2/2" terminalType="default" terminalSymbol="→" />
 
 <div class="prose dark:prose-invert">
-  <h2 class="text-3xl mt-24">Explore & Enjoy!</h2>
-
-  <p>
-    Take a peek at your project’s new <code>.ddev/</code> directory. You can add
-    this to your repo to share your DDEV config, edit <code>.ddev/ddev.yaml</code> to change <a
-      href="https://ddev.readthedocs.io/en/stable/users/configuration/config/"
-      target="_blank"
-
-      >project options</a
-    >, or even go about your business and pretend this folder doesn’t exist.
-  </p>
-
-  <p>
-    Run the <a
-      href="https://ddev.readthedocs.io/en/stable/users/usage/commands/#help"
-      target="_blank"
-      >help command
-    </a> (or plain <code>ddev</code>) to see the actions you can take with the
-    CLI:
-  </p>
-
-  <Terminal code={`→ ddev -h`} />
-
-  <p>
-    Use the <a
-      href="https://ddev.readthedocs.io/en/stable/users/usage/commands/#describe"
-      target="_blank"
-      >describe command
-    </a> to see a project’s parts and database connection details:
-  </p>
-
-  <Terminal code={`→ ddev describe`} />
-
-  <p>
-    If you’re done working on a project and want to shut it down without
-    removing anything, use the <a
-      href="https://ddev.readthedocs.io/en/stable/users/usage/commands/#stop"
-      target="_blank"
-      >stop command
-    </a>:
-  </p>
-
-  <Terminal code={`→ ddev stop`} />
-
-  <p>
-    If you were just kicking the tires and you want to permanently delete the
-    project and its resources without touching your code, run the <a
-      href="https://ddev.readthedocs.io/en/stable/users/usage/commands/#delete"
-      target="_blank"
-      >delete command
-    </a>:
-  </p>
-
-  <Terminal code={`→ ddev delete`} />
-
   <CommunityCTA />
 </div>
