--- a/src/pages/foundation.astro
+++ b/src/pages/foundation.astro
@@ -40,7 +40,7 @@ const title = `DDEV Foundation`
 
           <h2>Contact the DDEV Foundation</h2>
 
-          <p>Contact <a href="{EMAIL_URL}">support</a>.</p>
+          <p>Contact <a href={EMAIL_URL}>support</a>.</p>
 
           <h2>Snail Mail and Phone:</h2>
 
